# src/serverBuilder.ts
@@ -1,21 +1,21 @@
-import express from 'express';
 import { ApolloServer } from 'apollo-server-express';
 import bodyParser from 'body-parser';
 import compression from 'compression';
 import cors from 'cors';
+import express from 'express';
 import { middleware as OpenApiMiddleware } from 'express-openapi-validator';
 import { GraphQLError, printSchema } from 'graphql';
 import { get, isEmpty } from 'lodash';
 import { inject, injectable } from 'tsyringe';
 import { buildSchemaSync } from 'type-graphql';
-//import { getErrorHandlerMiddleware } from '@map-colonies/error-express-handler';
 import httpLogger from '@map-colonies/express-access-log-middleware';
 import { Logger } from '@map-colonies/js-logger';
 import { OpenapiViewerRouter, OpenapiRouterConfig } from '@map-colonies/openapi-express-viewer';
+import { callbackRouter } from './callback/callbackRouter';
 import { Services } from './common/constants';
 import { IConfig, IContext } from './common/interfaces';
 import { getResolvers } from './graphql/resolvers';
-import { streamFileRouter } from './stream-route/streamRouter';
+import { streamingRouter } from './streaming/streamingRouter';
 
 @injectable()
 export class ServerBuilder {
@@ -27,12 +27,33 @@ export class ServerBuilder {
 
   public build(): express.Application {
     this.registerPreRoutesMiddleware();
-    this.buildAPIRoutes();
     this.buildRoutes();
-    this.buildGraphQL();
+    this.setupGraphQL();
     this.registerPostRoutesMiddleware();
 
     return this.serverInstance;
+  }
+
+  private registerPreRoutesMiddleware(): void {
+    this.serverInstance.use(httpLogger({ logger: this.logger as unknown as any }));
+    this.serverInstance.use(cors());
+    if (this.config.get<boolean>('server.response.compression.enabled')) {
+      this.serverInstance.use(compression(this.config.get<compression.CompressionFilter>('server.response.compression.options')));
+    }
+    this.serverInstance.use(bodyParser.json(this.config.get<bodyParser.Options>('server.request.payload')));
+    const ignorePathRegex = new RegExp(`^${this.config.get<string>('openapiConfig.basePath')}/.*`, 'i');
+    const apiSpecPath = this.config.get<string>('openapiConfig.filePath');
+    this.serverInstance.use(OpenApiMiddleware({ apiSpec: apiSpecPath, validateRequests: true, ignorePaths: ignorePathRegex }));
+  }
+
+  private buildRoutes(): void {
+    this.buildRestRoutes();
+    this.buildDocsRoutes();
+  }
+
+  private buildRestRoutes(): void {
+    this.serverInstance.use('/api', streamingRouter());
+    this.serverInstance.use('/callback', callbackRouter());
   }
 
   private buildDocsRoutes(): void {
@@ -41,36 +62,7 @@ export class ServerBuilder {
     this.serverInstance.use(this.config.get<string>('openapiConfig.basePath'), openapiRouter.getRouter());
   }
 
-  private buildRoutes(): void {
-    this.buildDocsRoutes();
-  }
-
-  private buildAPIRoutes(): void {
-    this.serverInstance.use('/', streamFileRouter());
-  }
-
-  private registerPreRoutesMiddleware(): void {
-    // @ts-expect-error the signature is wrong
-    this.serverInstance.use(httpLogger({ logger: this.logger }));
-
-    this.serverInstance.use(cors());
-
-    if (this.config.get<boolean>('server.response.compression.enabled')) {
-      this.serverInstance.use(compression(this.config.get<compression.CompressionFilter>('server.response.compression.options')));
-    }
-
-    this.serverInstance.use(bodyParser.json(this.config.get<bodyParser.Options>('server.request.payload')));
-
-    const ignorePathRegex = new RegExp(`^${this.config.get<string>('openapiConfig.basePath')}/.*`, 'i');
-    const apiSpecPath = this.config.get<string>('openapiConfig.filePath');
-    this.serverInstance.use(OpenApiMiddleware({ apiSpec: apiSpecPath, validateRequests: true, ignorePaths: ignorePathRegex }));
-  }
-
-  private registerPostRoutesMiddleware(): void {
-    // this.serverInstance.use(getErrorHandlerMiddleware());
-  }
-
-  private buildGraphQL(): void {
+  private setupGraphQL(): void {
     const resolvers = getResolvers();
     const schema = buildSchemaSync({ resolvers });
     const server = new ApolloServer({
@@ -83,7 +75,6 @@ export class ServerBuilder {
         const serverResponse = get(formattedError, 'extensions.exception.response') as Record<string, unknown>;
         if (get(formattedError, 'extensions.exception.isAxiosError') === true && !isEmpty(serverResponse.data)) {
           const resMessage = (get(serverResponse, 'data.message') as string | undefined) ?? '';
-
           return {
             ...formattedError,
             serverResponse: {
@@ -98,5 +89,9 @@ export class ServerBuilder {
     });
     this.logger.info(`Started GraphQL server with schema: ${printSchema(schema)}`);
     server.applyMiddleware({ app: this.serverInstance });
+  }
+
+  private registerPostRoutesMiddleware(): void {
+    // this.serverInstance.use(getErrorHandlerMiddleware());
   }
 }
